# Mx3

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindFMOD.cmake
demo/: CMakeLists.txt
examples/: CMakeLists.txt  class_test.cpp  common.cpp  common.h  fmod_test.cpp  loop_test.cpp
examples/linux/: common_platform.cpp  common_platform.h
examples/linux/debug/: debug_terminal.cpp
examples/widgets/: widgets.cpp  widgets.hpp
examples/win32/: common_platform.cpp  common_platform.h
inc/: Mx3.hpp  Mx3Types.hpp  Song.hpp
include/: Component.hpp  LoopRegion.hpp  MultiSong.hpp  Mx3.hpp  Parameter.hpp  Track.hpp
src/: CMakeLists.txt  Component.hpp  LoopRegion.cpp  LoopRegion.hpp  MultiSong.cpp  Mx3.cpp  Parameter.cpp  Parameter.hpp  Song.cpp  Track.cpp
tests/: ConsoleTest.cpp  FunctionTest.cpp  NestedLoop.cpp  TrackSamples.cpp
tests/data/: ThreePointCurveData_1.csv  ThreePointCurveData_2.csv
tests/win32/: common_platform.cpp  common_platform.h
